2003-10-27  Vincent Untz  <vincent@vuntz.net>

	* foundation.gnome.org/.cvsignore: added news.html
	* foundation.gnome.org/elections/2002/.cvsignore: added
	preliminary_results.html
	* foundation.gnome.org/index.wml: s/&/&amp;/
	* foundation.gnome.org/news.wml
	* foundation.gnome.org/documentation/index.wml
	* foundation.gnome.org/elections/overview.wml
	* foundation.gnome.org/elections/2000/candidates.wml
	* foundation.gnome.org/elections/2000/rules.wml
	* foundation.gnome.org/elections/2001/candidates.wml
	* foundation.gnome.org/elections/2001/rules.wml
	* foundation.gnome.org/elections/2002/candidates.wml
	* foundation.gnome.org/elections/2002/rules.wml
	* foundation.gnome.org/elections/2003/rules.wml
	* foundation.gnome.org/membership/application.wml
	* foundation.gnome.org/membership/index.wml
	* foundation.gnome.org/membership/policy.wml:
	Fix the links. Make all links relative.

2003-10-25  Glynn Foster  <glynn.foster@sun.com>

	* foundation.gnome.org/Makefile.am: Add new page
	* foundation.gnome.org/index.wml: Change title, remove news items, and
	add Wilson Sonsini thank you.
	* foundation.gnome.org/news.wml: Add new.
	* include/evilsedhack: s/Fundraising/Donate to GNOME

2003-10-25  Vincent Untz  <vincent@vuntz.net>

	* .cvsignore
	* foundation.gnome.org/elections/.cvsignore
	* foundation.gnome.org/elections/2000/Makefile.am
	* foundation.gnome.org/elections/2001/Makefile.am
	* foundation.gnome.org/elections/2002/Makefile.am
	* foundation.gnome.org/membership/Makefile.am: added missing files
	* autogen.sh: changed references to other modules :-)
	* foundation.gnome.org/htaccess: added a lot of redirections
	* foundation.gnome.org/elections/overview.wml: removed the date which
	was specific to one election
	* foundation.gnome.org/elections/2001/voters.wml
	* foundation.gnome.org/elections/2003/voters.wml: added encoding meta
	* foundation.gnome.org/elections/2002/preliminary_results.html
	* foundation.gnome.org/elections/2002/preliminary_results.wml: this