@@ -14,14 +14,15 @@ AC_SUBST(HTTP_PREFIX)
 AC_OUTPUT([
 Makefile
 foundation.gnome.org/Makefile
-foundation.gnome.org/img/Makefile
-foundation.gnome.org/img/logos/Makefile
-foundation.gnome.org/organization/Makefile
 foundation.gnome.org/documentation/Makefile
-foundation.gnome.org/membership/Makefile
 foundation.gnome.org/elections/Makefile
 foundation.gnome.org/elections/2000/Makefile
 foundation.gnome.org/elections/2001/Makefile
 foundation.gnome.org/elections/2002/Makefile
 foundation.gnome.org/elections/2003/Makefile
+foundation.gnome.org/img/Makefile
+foundation.gnome.org/img/logos/Makefile
+foundation.gnome.org/membership/Makefile
+foundation.gnome.org/news/Makefile
+foundation.gnome.org/organization/Makefile
 ])
