@@ -54,7 +54,7 @@
      </li>
    </ul>
 
-     <p><small>More news is available <a href="news.html">here</a></small></p>
+     <p><small>More news is available <a href="news/">here</a></small></p>
 
    <h2>Sponsors</h2>
    <center>
