@@ -1,4 +1,3 @@
-.htaccess
 index.html
 Makefile.in
 Makefile
