@@ -1,0 +1,8 @@
+SUBDIRS =
+
+urlpath = /news
+ 
+page_SCRIPTS = \
+        index.html
+
+include $(top_srcdir)/rules.common
