@@ -14,9 +14,9 @@
        <strong>2003 GNOME Foundation Elections</strong>
        <small>(22/10/2003)</small>
        <blockquote>
-	The GNOME Foundation <a href="elections/2003/">elections</a> will begin in November. If you 
+	The GNOME Foundation <a href="../elections/2003/">elections</a> will begin in November. If you 
 	want to run for these elections, you have to nominate yourself before November 7th. Take a 
-	look at the <a href="elections/2003/rules.html">rules and the timeline</a>.
+	look at the <a href="../elections/2003/rules.html">rules and the timeline</a>.
        </blockquote>
      </li>
      <li>
@@ -55,8 +55,8 @@
        <strong>2002 GNOME Foundation Elections</strong>
        <small>(11/20/2002)</small>
        <blockquote>
-	 The GNOME Foundation <a href="elections/2002/">elections</a> have
-	 begun. There are 23 <a href="elections/2002/candidates.html">candidates</a>
+	 The GNOME Foundation <a href="../elections/2002/">elections</a> have
+	 begun. There are 23 <a href="../elections/2002/candidates.html">candidates</a>
 	 running for these elections.
        </blockquote>
      </li>
@@ -64,7 +64,7 @@
        <strong>Foundation By-laws Posted</strong>
        <small>(09/24/2002)</small>
        <blockquote>
-         The GNOME Foundation <a href="documentation/bylaws.pdf">by-laws</a> have now been
+         The GNOME Foundation <a href="../documentation/bylaws.pdf">by-laws</a> have now been
          posted in PDF format.
        </blockquote>
      </li>
@@ -74,7 +74,7 @@
        <blockquote>
          We are currently working to renew all old-style GNOME
          Foundation memberships under the new rules, available
-         <a href="membership/policy.html">here</a>. Affected members will
+         <a href="../membership/policy.html">here</a>. Affected members will
          receive mail today explaining what they need to do.
        </blockquote>
      </li>
@@ -113,7 +113,7 @@
         <strong>2001 Final list of election Candidates Announced</strong> <small>(11/10/2001)</small>
         <blockquote>
           All 2001 election candidates have been compiled into a
-          <a href="elections/2001/candidates.html">Final List of Candidates</a>.
+          <a href="../elections/2001/candidates.html">Final List of Candidates</a>.
           Voting begins on the 20th November and finishes on the 27th November.
         </blockquote>
      </li>
@@ -138,9 +138,9 @@
      <li>
         <strong>New Membership Policy Adopted</strong> <small>(07/12/2001)</small> 
         <blockquote>
-          A new <a href="membership/policy.html">membership qualification policy</a> has 
+          A new <a href="../membership/policy.html">membership qualification policy</a> has 
           been adopted and the GNOME Foundation Membership has been re-opened to new members. If you 
-          would like to become a member, please <a href="membership/application.php">apply here</a>.  
+          would like to become a member, please <a href="../membership/application.php">apply here</a>.  
         </blockquote>
      </li>
      <li>
